lwb-specific-implementations/monticore-scolar-instance/mc-language-component-tool/src/test/resources/cocos/invalid/ReferencedRuleInEPNotAnInterface.comp
package cocos.invalid;

language component ReferencedRuleInEPNotAnInterface {

  grammar mc.lang.G1;

  provides production A for A;

  requires optional production OtherEP for A;
}